Z-index corrected on CTA

--- a/css/style.css
+++ b/css/style.css
@@ -315,6 +315,7 @@ li {
     position: fixed;
     top: 0;
     right: 0;
+    z-index: 999;
     
     width: calc(100% - var(--sidebar-width));
     height: var(--cta-height);
